kubernetes/apps/package-watcher/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: package-watcher-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stg-package-watcher.piny940.com
      secretName: cluster-tls
  rules:
    - host: stg-package-watcher.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: package-watcher
                port:
                  number: 8080
